--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "^3.3.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "node server/server.js",
